--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ plugins {
 android {
     compileSdk 32
 
+    dataBinding{
+        enabled = true
+    }
+    
     defaultConfig {
         applicationId "com.example.gratefulnote"
         minSdk 23
