--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,12 @@ android {
 }
 
 dependencies {
+    // room version
+    var room_version = "2.4.2"
+    annotationProcessor("androidx.room:room-compiler:$room_version")
+    implementation("androidx.room:room-runtime:$room_version")
+    implementation("androidx.room:room-ktx:$room_version")
+
     // nav version
     var nav_version = "2.4.2"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
