Menambahkan banyak hal
- Menambahkan viewModelFactory pada addgratitude (dan menambahkan beberapa dependency)
- Menambahkan fitur navigating setelah click button
- Memodifikasi/merefactor nama-nama file pada paket database

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -39,9 +40,10 @@ android {
 dependencies {
     // room version
     var room_version = "2.4.2"
-    annotationProcessor("androidx.room:room-compiler:$room_version")
-    implementation("androidx.room:room-runtime:$room_version")
-    implementation("androidx.room:room-ktx:$room_version")
+    kapt "androidx.room:room-compiler:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     // nav version
     var nav_version = "2.4.2"
