--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,6 @@ dependencies {
 
     // fragment
     implementation "androidx.fragment:fragment-ktx:1.4.1"
+
+    implementation 'com.google.code.gson:gson:2.9.1'
 }
