--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,9 @@ android {
     dataBinding{
         enabled = true
     }
+    viewBinding{
+        enabled = true
+    }
 
     defaultConfig {
         applicationId "com.example.gratefulnote"
