--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+
 
     // Recycler view
     implementation "androidx.recyclerview:recyclerview:1.2.1"
