--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ android {
 
 dependencies {
     implementation 'androidx.test.ext:junit-ktx:1.1.3'
+    implementation 'androidx.test.espresso:espresso-contrib:3.5.1'
 
     // room version
     var room_version = "2.4.3"
