--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,18 @@ buildscript {
         var nav_version = "2.5.2"
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
     }
+
+    ext {
+        compileSdkVersion = 34
+
+        kotlinVersion = "1.9.20"
+    }
 }
 
 plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlinVersion" apply false
 }
 
 task clean(type: Delete) {
