--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,7 @@ dependencies {
 
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.compose.material:material-icons-extended"
+    implementation "androidx.activity:activity-compose"
 
     implementation 'androidx.compose.ui:ui-tooling-preview'
     debugImplementation 'androidx.compose.ui:ui-tooling'
