--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()
     }
     dependencies {
         var nav_version = "2.5.2"
