--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,7 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
 
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
 
     var cucumberVersion = '7.14.0'
     androidTestImplementation "io.cucumber:cucumber-android:$cucumberVersion"
