--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 
     ext {
         compileSdkVersion = 34
-
+        hiltVersion = "2.50"
         kotlinVersion = "1.9.20"
     }
 }
@@ -21,6 +21,7 @@ plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
     id 'org.jetbrains.kotlin.android' version "$kotlinVersion" apply false
+    id 'com.google.dagger.hilt.android' version "$hiltVersion" apply false
 }
 
 task clean(type: Delete) {
