--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ plugins {
 }
 
 android {
+    namespace "com.example.gratefulnote"
+
     compileSdk 34
 
     dataBinding{
@@ -20,11 +22,12 @@ android {
     defaultConfig {
         applicationId "com.example.gratefulnote"
         minSdk 23
-        targetSdk 32
+        targetSdk 34
         versionCode 2
         versionName "2.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        // testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.example.gratefulnote.runner.HiltTestRunner"
 
         javaCompileOptions {
             annotationProcessorOptions {
@@ -127,8 +130,10 @@ dependencies {
     androidTestImplementation "androidx.activity:activity-compose"
 
     // dagger-hilt
-    implementation "com.google.dagger:hilt-android:$hiltVersion"
-    kapt "com.google.dagger:hilt-compiler:$hiltVersion"
+    implementation "com.google.dagger:hilt-android:2.50"
+    kapt "com.google.dagger:hilt-compiler:2.50"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:2.50"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:2.50"
 
 }
 
