--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.gratefulnote">
+    xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="28"/>
     <application
         android:requestLegacyExternalStorage="true"
-        android:name=".CustomApplication"
+        android:name=".HiltApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_health_note_launcher"
         android:label="@string/app_name"
