--- a/build.gradle
+++ b/build.gradle
@@ -6,22 +6,15 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        var nav_version = "2.5.2"
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
-    }
-
-    ext {
-        compileSdkVersion = 34
-        hiltVersion = "2.50"
-        kotlinVersion = "1.9.20"
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.2")
     }
 }
 
 plugins {
-    id 'com.android.application' version '7.1.1' apply false
-    id 'com.android.library' version '7.1.1' apply false
-    id 'org.jetbrains.kotlin.android' version "$kotlinVersion" apply false
-    id 'com.google.dagger.hilt.android' version "$hiltVersion" apply false
+    id 'com.android.application' version '8.1.4' apply false
+    id 'com.android.library' version '8.1.4' apply false
+    id 'org.jetbrains.kotlin.android' version "1.9.20" apply false
+    id 'com.google.dagger.hilt.android' version "2.50" apply false
 }
 
 task clean(type: Delete) {
