nambahkan repository dan manager di daily notification
ngerapiin struktur folder di daily notification
nambahin repository untuk entity daily notification
nambahin notification manager untuk ngebuat transaction pada repository dan nge-set alarm

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".notification.AlarmReceiver"
+        <receiver android:name=".daily_notification.data.service.DailyNotificationBroadcastReceiver"
             android:enabled="true"
             android:exported="false"/>
     </application>
