--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,6 +135,10 @@ dependencies {
     androidTestImplementation "com.google.dagger:hilt-android-testing:2.50"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:2.50"
 
+    androidTestImplementation 'org.mockito:mockito-core:5.11.0'
+    androidTestImplementation 'org.mockito:mockito-android:5.11.0'
+
+
 }
 
 kapt {
