--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,6 +131,7 @@ dependencies {
 
     // dagger-hilt
     implementation "com.google.dagger:hilt-android:2.50"
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.2.0'
     kapt "com.google.dagger:hilt-compiler:2.50"
     androidTestImplementation "com.google.dagger:hilt-android-testing:2.50"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:2.50"
