--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
@@ -24,7 +23,8 @@
         </activity>
         <receiver android:name=".daily_notification.data.service.DailyNotificationBroadcastReceiver"
             android:enabled="true"
-            android:exported="false"/>
+            android:exported="false">
+        </receiver>
     </application>
 
 </manifest>
