--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,11 @@ android {
         enabled = true
     }
 
+    testBuildType "debugTest"
+
     defaultConfig {
-        applicationId "com.example.gratefulnote"
+        applicationId "com.hezapp.gratefulnote"
+        testApplicationId "com.hezapp.gratefulnote_instrumentation"
         minSdk 23
         targetSdk 34
         versionCode 2
@@ -40,10 +43,15 @@ android {
         debug {
             applicationIdSuffix ".debug"
         }
+        debugTest {
+            initWith buildTypes.debug
+            applicationIdSuffix ".test"
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
     }
 
     buildFeatures {
@@ -127,6 +135,8 @@ dependencies {
 
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.3.0'
+
 
     androidTestImplementation "androidx.activity:activity-compose"
 
