--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ room = "2.6.1"
 androidx-navigation = "2.5.2"
 kotlin = "2.0.20"
 ksp = "2.0.20-1.0.24"
+android-sdk = "8.1.4"
 
 [libraries]
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt-android"}
@@ -24,6 +25,11 @@ navigation-ui-ktx = {group = "androidx.navigation", name = "navigation-ui-ktx", 
 [plugins]
 hilt-android = {id = "com.google.dagger.hilt.android", version.ref = "hilt-android"}
 navigation-safeargs = {id = "androidx.navigation.safeargs", version.ref = "androidx-navigation"}
+
 kotlin = {id = "org.jetbrains.kotlin.android", version.ref = "kotlin"}
 compose-compiler = {id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin"}
+
 ksp = {id = "com.google.devtools.ksp", version.ref = "ksp"}
+
+android-application = {id = "com.android.application", version.ref = "android-sdk"}
+android-library = {id = "com.android.library", version.ref = "android-sdk"}
