--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,21 +6,48 @@ androidx-navigation = "2.5.2"
 kotlin = "2.0.20"
 ksp = "2.0.20-1.0.24"
 android-sdk = "8.1.4"
+mockito = "5.11.0"
+espresso = "3.5.1"
+androidx-test = "1.4.0"
+androidx-test-ext = "1.1.3"
+androidx-core = "1.7.0"
 
 [libraries]
+# Hilt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt-android"}
 hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-fragment", version.ref = "hilt-navigation"}
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt-android"}
 hilt-android-test = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt-android"}
 hilt-android-compiler = { group = "com.google.dagger" , name = "hilt-android-compiler", version.ref = "hilt-android"}
 
+# Room
 room-compiler = {group = "androidx.room", name = "room-compiler", version.ref = "room"}
 room-runtime = {group = "androidx.room", name = "room-runtime", version.ref = "room"}
 room-ktx = {group = "androidx.room", name = "room-ktx", version.ref = "room"}
 room-testing = {group = "androidx.room", name = "room-testing", version.ref = "room"}
 
+# Navigation
 navigation-fragment-ktx = {group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "androidx-navigation"}
 navigation-ui-ktx = {group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "androidx-navigation"}
+
+# Mockito
+mockito-core = {group = "org.mockito", name = "mockito-core", version.ref = "mockito"}
+mockito-android = {group = "org.mockito", name = "mockito-android", version.ref = "mockito"}
+
+# Espresso
+espresso-contrib = {group = "androidx.test.espresso", name = "espresso-contrib", version.ref = "espresso"}
+espresso-core = {group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso"}
+espresso-intents = {group = "androidx.test.espresso", name = "espresso-intents", version.ref = "espresso"}
+
+# Androidx.Test.Ext
+junit-ktx = {group = "androidx.test.ext", name = "junit-ktx", version.ref = "androidx-test-ext"}
+junit = {group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext"}
+
+# Androidx.Test
+test-runner = {group = "androidx.test", name = "runner", version.ref = "androidx-test"}
+
+# Androidx.Core
+core-ktx = {group = "androidx.core", name = "core-ktx", version.ref = "androidx-core"}
 
 [plugins]
 hilt-android = {id = "com.google.dagger.hilt.android", version.ref = "hilt-android"}
