--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ androidx-test-ext = "1.1.3"
 androidx-core = "1.7.0"
 paging = "3.3.4"
 paging-runtime-ktx = "3.3.4"
+io-cucumber = "7.18.1"
+uiautomator = "2.3.0"
 
 [libraries]
 # Hilt
@@ -41,12 +43,20 @@ espresso-contrib = {group = "androidx.test.espresso", name = "espresso-contrib",
 espresso-core = {group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso"}
 espresso-intents = {group = "androidx.test.espresso", name = "espresso-intents", version.ref = "espresso"}
 
+# Ui Automator
+uiautomator = {group = "androidx.test.uiautomator", name = "uiautomator", version.ref = "uiautomator"}
+
 # Androidx.Test.Ext
 junit-ktx = {group = "androidx.test.ext", name = "junit-ktx", version.ref = "androidx-test-ext"}
 junit = {group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext"}
 
 # Androidx.Test
 test-runner = {group = "androidx.test", name = "runner", version.ref = "androidx-test"}
+
+# Cucumber
+cucumber-android = {group = "io.cucumber", name = "cucumber-android", version.ref = "io-cucumber"}
+cucumber-android-hilt = {group = "io.cucumber", name = "cucumber-android-hilt", version.ref = "io-cucumber"}
+#cucumber-picocontainer = { group = "io.cucumber", name = "cucumber-picocontainer", version.ref = "io-cucumber" }
 
 # Androidx.Core
 core-ktx = {group = "androidx.core", name = "core-ktx", version.ref = "androidx-core"}
